--- a/docker/dockerfile_test
+++ b/docker/dockerfile_test
@@ -4,7 +4,7 @@ COPY /requirements /requirements
 RUN pip install -r ./requirements/dev.txt
 RUN pip install -r ./requirements/test.txt
 
+COPY /data /data
 COPY /src /src
 COPY /unittests /unittests
-COPY /docs /docs
 
